# lanch-web

./: .env  .gitignore  Dockerfile  Procfile  README.md  app.py  development.ini  docker-compose.yaml  gunicorn.conf.py  production.ini  pyproject.toml  requirements.txt  run  setup.py
.github/workflows/: app.yaml
flask_lunch_web/: app.py  controller.py  restaurants.json
lunch_backend/: app.py  restaurants.json
lunch_backend/resources/: menu.py  restaurants.py
lunch_web/: .coveragerc  README.txt  __init__.py  app.py  contoller.py  controller.py  parsers.py  restaurants.json  run  testing.ini
lunch_web/lunch_web/: __init__.py
lunch_web/lunch_web/views/: default.py
lunch_web/resources/: health.py  menu.py  restaurants.py
lunch_web/static/: lunch.css
lunch_web/templates/: base.jinja2  day-menu.jinja2  lunches.jinja2
lunch_web/tests/: conftest.py  test_views.py
lunch_web/views/: default.py
lunch_web/wsgi/: gunicorn_app.py  gunicorn_conf.py
src/: app.py  setup.py
src/app_backend/: controller.py  parsers.py
tests/: conftest.py  test_resources.py  test_views.py
